--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html,
 body {
     margin: 0;
     padding: 0;
+    background-color: #5e578d;
 }
 
 main {
@@ -31,7 +32,7 @@ main {
 h1 {
     font-family: 'Open Sans';
     font-weight: 800;
-    color: white;
+    color: black;
     padding: 10px;
     margin-top: 0;
 }
@@ -39,8 +40,9 @@ h1 {
 .position_h1 {
     width: 100%;
     text-align: center;
-    background-color: rgb(240, 79, 79);
+    background-color: #2f276d;
     border-radius: 50px;
+
 }
 
 .text_vvod {
@@ -50,7 +52,12 @@ h1 {
     font-family: 'Open Sans';
     font-weight: 600;
     font-size: 20px;
+    background-color: #463f7d;
+    border-radius: 15px;
+    border: none;
+    outline: none;
 }
+
 
 .btn-vvod {
     padding: 7px 30px;
@@ -59,6 +66,9 @@ h1 {
     font-weight: 600;
     height: 45px;
     font-size: 20px;
+    background-color: #2f276d;
+    border: none;
+    border-radius: 15px;
 }
 
 .pole_position {
@@ -109,6 +119,7 @@ h1 {
     border-radius: 10px;
     -webkit-transition: -webkit-transform .8s ease-in-out;
     transition: transform .8s ease-in-out;
+    background-color: transparent;
 }
 
 .delete-btn:hover {
